--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -19,7 +19,7 @@ encryption_include_filters=""
 encryption_exclude_filters=""
 seed=0
 encrypt_pck=false
-encrypt_directory=false
+encrypt_directory=true
 script_export_mode=2
 
 [preset.0.options]
@@ -55,7 +55,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="../../Builds/Pong/v1.1/Windows/Pong.exe"
 patches=PackedStringArray()
 patch_delta_encoding=false
 patch_delta_compression_level_zstd=19
@@ -89,11 +89,11 @@ application/modify_resources=true
 application/icon="uid://is5dawopnsg4"
 application/console_wrapper_icon=""
 application/icon_interpolation=4
-application/file_version="1.0.0.0"
-application/product_version="1.0.0.0"
+application/file_version="1.1.0.0"
+application/product_version="1.1.0.0"
 application/company_name=""
 application/product_name="Pong"
-application/file_description=""
+application/file_description="Jogo de Ping-Pong!"
 application/copyright=""
 application/trademarks=""
 application/export_angle=0
